Fixed conditional problems. Changed ternary operator to if-else statements. Added functionalities such as round counter, a log of round results. Still need to fix log overflow.

--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,32 @@ a {
     text-decoration: none;
     color: orange;
 }
+
+#scores{
+    display: flex;
+    flex-direction: row;
+    border: 1px solid #888888;
+    padding: 10px;
+    box-shadow: 5px 10px #888888;
+    list-style: none;
+}
+#log, .score {
+    list-style: none;
+}
+
+.playerScore{
+    color: green;
+    padding: 0px 15px;
+}
+
+.computerScore {
+    color: brown;
+    padding: 0px 15px;
+}
+
+/* #log {
+    border: 1px solid #888888;
+    padding: 10px;
+    box-shadow: 5px 10px #888888;
+    list-style: ;
+} */
